@@ -1,112 +1,67 @@
 package com.example.closestv2.domain.blog;
 
-import com.example.closestv2.support.RepositoryTestSupport;
-import jakarta.validation.ConstraintViolationException;
-import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.time.LocalDateTime;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
-@Transactional
-class BlogInfoTest extends RepositoryTestSupport {
-    @Autowired
-    private BlogRepository blogRepository;
+class BlogInfoTest {
 
-    @Test
-    @DisplayName("Blog 생성 시 postUrl, blogTitle, author, publishedDateTime으로 BlogInfo을 생성한다.")
-    void createBlogByBlogInfo() throws MalformedURLException {
-        //given
-        URL blogUrl = new URL("https://example.com/blog123");
-        String blogTitle = "제목";
-        String author = "작가";
-        LocalDateTime publishedDateTime = LocalDateTime.of(2022, 1, 1, 12, 3, 31);
-        BlogRoot blogRoot = BlogRoot.create(
-                blogUrl,
-                blogTitle,
-                author,
-                publishedDateTime
-        );
-        // when
-        blogRepository.save(blogRoot);
-        // then
-        BlogInfo blogInfo = blogRoot.getBlogInfo();
-        assertThat(blogInfo)
-                .extracting(BlogInfo::blogUrl, BlogInfo::blogTitle, BlogInfo::author, BlogInfo::publishedDateTime)
-                .containsExactly(new URL("https://example.com/blog123"), "제목", "작가", LocalDateTime.of(2022, 1, 1, 12, 3, 31));
+    private final static URL ANY_BLOG_URL;
+
+    static {
+        try {
+            ANY_BLOG_URL = URI.create("https://example.com/blog123").toURL();
+        } catch (MalformedURLException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    private final static String ANY_BLOG_TITLE = "제목";
+    private final static String ANY_AUTHOR = "작가";
+    private final static LocalDateTime ANY_PUBLISHED_DATE_TIME = LocalDateTime.of(2022, 1, 1, 12, 3, 31);
+    private final static String ANY_STATUS_MESSAGE = "ANY_STATUS_MESSAGE";
+
+    BlogInfo sut;
+
+    BlogInfo.BlogInfoBuilder builder;
+
+    @BeforeEach
+    void setUp() {
+        builder = BlogInfo.builder()
+                .blogUrl(ANY_BLOG_URL)
+                .author(ANY_AUTHOR)
+                .blogTitle(ANY_BLOG_TITLE)
+                .blogVisitCount(0L)
+                .publishedDateTime(ANY_PUBLISHED_DATE_TIME)
+                .statusMessage(ANY_STATUS_MESSAGE);
     }
 
     @Test
-    @DisplayName("Blog 생성 시 BlogInfo의 url이 null이면 에러가 발생한다.")
-    void createBlogInfoWithNullUrl() {
-        //given
-        URL blogUrl = null;
-        //when
-        BlogRoot blogRoot = BlogRoot.create(
-                blogUrl,
-                "제목",
-                "작가",
-                LocalDateTime.of(2022, 1, 1, 12, 3, 31)
-        );
-        //expected
-        assertThatThrownBy(() -> blogRepository.save(blogRoot))
-                .isInstanceOf(ConstraintViolationException.class);
+    void createFailTest() {
+        assertThatThrownBy(() -> sut = builder.blogUrl(null).build()).isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> sut = builder.blogTitle(null).build()).isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> sut = builder.author(null).build()).isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> sut = builder.publishedDateTime(null).build()).isInstanceOf(IllegalArgumentException.class);
     }
 
     @Test
-    @DisplayName("Blog 생성 시 BlogInfo의 title이 null이면 에러가 발생한다.")
-    void createBlogInfoWithNullTitle() throws MalformedURLException {
-        //given
-        String blogTitle = null;
-        //when
-        BlogRoot blogRoot = BlogRoot.create(
-                new URL("https://example.com/blog123"),
-                blogTitle,
-                "작가",
-                LocalDateTime.of(2022, 1, 1, 12, 3, 31)
+    void createSuccessTest() {
+        sut = builder.build();
+        assertThat(sut).isEqualTo(BlogInfo.builder()
+                .blogUrl(ANY_BLOG_URL)
+                .author(ANY_AUTHOR)
+                .blogTitle(ANY_BLOG_TITLE)
+                .blogVisitCount(0L)
+                .publishedDateTime(ANY_PUBLISHED_DATE_TIME)
+                .statusMessage(ANY_STATUS_MESSAGE)
+                .build()
         );
-        //expected
-        assertThatThrownBy(() -> blogRepository.save(blogRoot))
-                .isInstanceOf(ConstraintViolationException.class);
-    }
-
-    @Test
-    @DisplayName("Blog 생성 시 BlogInfo의 author이 null이면 에러가 발생한다.")
-    void createBlogInfoWithNullAuthor() throws MalformedURLException {
-        //given
-        String author = null;
-        //when
-        BlogRoot blogRoot = BlogRoot.create(
-                new URL("https://example.com/blog123"),
-                "제목",
-                author,
-                LocalDateTime.of(2022, 1, 1, 12, 3, 31)
-        );
-        //expected
-        assertThatThrownBy(() -> blogRepository.save(blogRoot))
-                .isInstanceOf(ConstraintViolationException.class);
-    }
-
-    @Test
-    @DisplayName("Blog 생성 시 BlogInfo의 url이 null이면 에러가 발생한다.")
-    void createBlogInfoWithNullPublishedDateTime() throws MalformedURLException {
-        //given
-        LocalDateTime publishedDateTime = null;
-        //when
-        BlogRoot blogRoot = BlogRoot.create(
-                new URL("https://example.com/blog123"),
-                "제목",
-                "작가",
-                publishedDateTime
-        );
-        //expected
-        assertThatThrownBy(() -> blogRepository.save(blogRoot))
-                .isInstanceOf(ConstraintViolationException.class);
     }
 }
